@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.19 2004/12/22 03:48:42 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.20 2005/01/04 22:45:47 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
   
+  04 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
+  A few tweaks to make it "work" with the GLIStorageDevice changes.
+
   21 Dec 2004; John Laliberte <allanonl@bu.edu>
   Daemons.py, Bootloader.py, Kernel.py, Stage.py, PortageTree.py, 
   MakeDotConf.py, RcDotConf.py now selects/loads the appropriate 
